[package]
name = "calcit_command"
version = "0.0.2"
authors = ["tiye <jiyinyiyong@gmail.com>"]
edition = "2024"

[lib]
name = "calcit_command"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.7.4"
cirru_parser = "0.2.4"
